# sqlalchemy2_base

./: .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
_archive/xsrc/: config.py  database.py  main.py  makefile  models.py  views.py
_archive/xsrc/log/: log.json
_archive/xsrc/requirements/: dev.txt  prd.txt
src/: .env_sample  example.py  makefile  pyproject.toml  requirements.txt
src/_scripts/: flake8.sh  rm_db_log.sh
src/_venv/: pyvenv.cfg
src/fastapi_async_sqlalchemy/: middleware.py
src/requirements/: dev.txt  prd.txt
src/service/: app_middleware.py  app_routes.py  gunicorn_cfg.py  main.py  resources.py  settings.py
src/service/api/: health.py  user.py
src/service/core/: custom_middleware.py  demo_user_generator.py  http_codes.py  logo.py  process_checks.py
src/service/database/: common_model.py  common_schema.py  db_session.py  user_model.py  user_schema.py
src/service/models/: users.py
src/tests/: conftest.py  test_health_status.py  test_index.py  test_user.py
